--- a/Que 3(completed)/q3.css
+++ b/Que 3(completed)/q3.css
@@ -5,17 +5,22 @@ body{
     text-align: center;
     margin: auto;
     display: block;
-    width: 100%;
+    width: 70%;
+    padding:1;
 }
+
 
 button{
     width: 20%;
     padding: 1rem;
     background-color:rgb(195, 195, 255);
-    color:white;
+    color:black;
     font-size:1rem;
+    margin-top: 1rem;
 }
 
-button a{
-    text-decoration: none;
+
+#output{
+    padding-top: 1rem;
+    font-size: 2rem;
 }
