--- a/Que1(completed)/q1.css
+++ b/Que1(completed)/q1.css
@@ -11,7 +11,7 @@ body{
 
 input{
     padding:1rem;
-    border: 2px solid blue;
+    border: 2px solid rgb(110, 110, 255);
     font-size: 1.5rem;
 }
 
@@ -30,8 +30,8 @@ input{
 button{
     width: 20%;
     padding: 1rem;
-    background-color:blue;
-    color:white;
+    background-color:rgb(195, 195, 255);
+    color:black;
     font-size:1rem;
 }
 
